# call_sumarizer_agents

./: .dockerignore  .env.template  .gitignore  BUG_FIXES_SUMMARY.md  CLAUDE.md  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  REFACTORING_SUMMARY.md  docker-compose.yml  main.py  pyproject.toml  workflow.py  workflow_refactored.py
agents/: __init__.py  base_agent.py  quality_score_agent.py  summarization_agent.py  summarization_agent_refactored.py  transcription_agent.py
config/: settings.py
data/sample_transcripts/: complaint_handling.txt  customer_support.txt  sales_inquiry.txt
data/transcripts/text/: sample.json  transcript1.txt  transcript10.txt  transcript2.txt  transcript3.txt  transcript4.txt  transcript5.txt  transcript6.txt  transcript7.txt  transcript8.txt  transcript9.txt
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  DOCKER.md  TROUBLESHOOTING.md
ui/: streamlit_app.py  styles.py
utils/: __init__.py  constants.py  exceptions.py  helpers.py  validation.py
