[project]
name = "call-summarizer-agents"
version = "0.1.0"
description = "AI Call Center Assistant with Multi-Agent System"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "openai>=1.35.0",
    "streamlit>=1.38.0",
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.0",
    "langsmith",
    "plotly>=5.17.0",
    "streamlit-extras>=0.7.5",
    "deepgram-sdk>=3.0.0",
]

[project.optional-dependencies]
whisper = [
    "openai-whisper>=20231117",
]
memory = [
    "redis>=5.0.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "ipykernel>=6.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "utils", "ui"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
